err/django-dust-sensor.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_dust_sensor-0.2.34.egg-info'...
Listing './lib/python3.5/site-packages/dust_sensor'...
Compiling './lib/python3.5/site-packages/dust_sensor/DustSensor.py'...
***   File "./lib/python3.5/site-packages/dust_sensor/DustSensor.py", line 94
    except ValueError,e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dust_sensor/management'...
Listing './lib/python3.5/site-packages/dust_sensor/management/commands'...
Compiling './lib/python3.5/site-packages/dust_sensor/management/commands/dust_measure.py'...
***   File "./lib/python3.5/site-packages/dust_sensor/management/commands/dust_measure.py", line 23
    print "Raw value: %0.2f" % data[0]
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
